*reposilite-2.9.26 (27 Dec 2021)

  27 Dec 2021; Manuel Friedli <manuel@gentoo.org> +files/reposilite-2.9.26.cdn,
  +reposilite-2.9.26.ebuild, -files/reposilite-2.9.16.cdn,
  -files/reposilite-2.9.18.cdn, -files/reposilite-2.9.23.cdn,
  -reposilite-2.9.16.ebuild, -reposilite-2.9.18.ebuild,
  -reposilite-2.9.23.ebuild, -reposilite-2.9.25.ebuild:
  dev-util/reposilite: Add ebuild for version 2.9.26  The dependency to docker
  has been fixed (app-emulation/docker --> app-containers/docker).

*reposilite-2.9.26 (16 Nov 2021)

  16 Nov 2021; Manuel Friedli <manuel@gentoo.org> +reposilite-2.9.26.ebuild:
  dev-util/reposilite: Add version 2.9.26

*reposilite-2.9.23 (24 Jul 2021)

  24 Jul 2021; Manuel Friedli <manuel@gentoo.org> +files/reposilite-2.9.23.cdn,
  +reposilite-2.9.23.ebuild:
  dev-util/reposilite: Add version 2.9.23

  08 Mar 2021; Manuel Friedli <manuel@gentoo.org> -files/reposilite-2.9.4.cdn,
  -reposilite-2.9.6.ebuild, -reposilite-2.9.8.ebuild:
  dev-util/reposilite: Prune very old ebuilds.

*reposilite-2.9.18 (08 Mar 2021)

  08 Mar 2021; Manuel Friedli <manuel@gentoo.org> +files/reposilite-2.9.18.cdn,
  +reposilite-2.9.18.ebuild:
  dev-util/reposilite: Bump to 2.9.18.

*reposilite-2.9.16 (24 Feb 2021)

  24 Feb 2021; Manuel Friedli <manuel@gentoo.org> +files/reposilite-2.9.16.cdn,
  +reposilite-2.9.16.ebuild:
  dev-util/reposilite: Ebuild for Version 2.9.16.

  24 Nov 2020; Manuel Friedli <manuel@gentoo.org> files/reposilite.service:
  dev-util/reposilite: Fixes #63.

*reposilite-2.9.6 (24 Nov 2020)

  24 Nov 2020; Manuel Friedli <manuel@gentoo.org> +reposilite-2.9.6.ebuild:
  dev-util/reposilite: Add version 2.9.6

  14 Nov 2020; Manuel Friedli <manuel@gentoo.org> reposilite-2.9.4.ebuild:
  dev-util/reposilite: Fixes #67

*reposilite-2.9.4 (14 Nov 2020)

  14 Nov 2020; Manuel Friedli <manuel@gentoo.org> +files/reposilite-2.9.4.cdn,
  +reposilite-2.9.4.ebuild, files/reposilite.service:
  dev-util/reposilite: Fixes #66
