@@ -1,7 +1,10 @@
 AUX app.ini 718 BLAKE2B 6d8abd16cc2eb522e5111d4874692a37698e59ed3db0d2072572f4ab7b6edcabe890aa9129beba932dadd9340e8d5491289ec562f1f9e7ac864fcc89d8389147 SHA512 5d2a6664c5b0bff5d1eeab2a07b7246230837273decaabbe6376b7315c18a897887530b1fdd7cd68eea9c6ffac90ef90d6769ef15e75129d6b67a0ca0ec775a5
 AUX reposilite-2.9.26.cdn 2372 BLAKE2B fdfa36d7ab9992f467f9f59383670dcbb0db7181f4c716dfad61b3790ce1dd53ad644cf536b4a3136e22359e0e3c2507e0b08cc24e24847604c29774f9c2c214 SHA512 ab1b5457b0ac569e593442ca544819377ec3c57c3f5aa6887c130ba56cdb0d899e4a0d0406c52992f98b718b906ff47b0e28ef79c84425f9e145ea87e27cfea8
+AUX reposilite-3.service 417 BLAKE2B 5daf93164c3488870d1cd4a8c135ed29c9c6815ee24cabd291ac0fed70d6bb5adc45119303fb99b221807efb2cb6df33c26c877ca8af8eed99aa1a47a46fb30b SHA512 257111e615213ca4379dcd731f926299cd96f1aff03706ae980a12e3aaaebf3c2148989e9d47b68e32578b72d2207643e01d581ed75f63b99d5586850d1778a3
 AUX reposilite.service 483 BLAKE2B 3a808346b9250020d0d089519bbbdbad2be919e44a1f3d578945ba3a1b2fcda416678048d0648e97b1821fb6c9e23990788334e22c69ad0cb5b5b489e449eaa2 SHA512 9c182670a37cf7f48f7e7d1350fdbf60cd39b1b065c4928f5cf7e5f8d6e6d0bd2ceafff8e091ebb09125fa707a70e4b30b4ee0224668de79434547fc3e78f839
 AUX reposilite.sh 744 BLAKE2B 524b3120b59b60c01e65654e4c7bf34d359e61b29f0e31a4762fda179c7b61ac91bea91ffb1c9d5d0470e0ae3683cad8ff32086125946c42b08a9fd156f65f10 SHA512 c781849ae3c116179ee3446ccf8620814514e4128df6cad917a010ffaba9efdd6cddda686a77ef348b80a920cd67b7ba19bc2a62c519ca7a795acdc8cc486c50
+DIST reposilite.jar 48898529 BLAKE2B cd71c5a636d3ae351409335cbc1cf190c018b06f9a4ec4451fa0eaa859adfc539dbc7d97de1847ace11a75fe79eb8e842e661b06ef931c45bb979ea519d5c731 SHA512 3cd8851be2d0ab917a1f8331327f99f9069f350c8d922e9d2481be954c8bf9b68bcb50b4243fa1b25b1ba0523df1bcc09ed00c641059228ed2579068d4d45f8d
 EBUILD reposilite-2.9.26.ebuild 944 BLAKE2B bff282682e0bbab5de6ccaa71653a75f36a5a91d1b200c8b83d487a6b16d93ddacb92ea3f0681b358c7ea4b5f29641711c04fa892291dcaea22a99b5c649bc0f SHA512 6990f57a449f33bf544110ce141a9d4ce47f686ab7ca68c9821cee2abda71aa749a37fe0aca5fdd4207e50143c560efd49ed8ebaaf97dc553ff12f3daa88a675
-MISC ChangeLog 2413 BLAKE2B df0c0ecdc8da493651ea0fc0e7cb0cce08a953be13457b1e4d39002edb0929f8db94a53f263251a31f612042bad49c8310b1e58cf3e0a60ac10d550bd364a54a SHA512 243a1af2f86b661eebcff981d819dd7b9a6ff79f21ad0d9666e12000625460edf0e27a94821cf93341997b9e99718f60992b4cb5809c5abc4cc0745fae1aaaa5
+EBUILD reposilite-3.0.1.ebuild 1219 BLAKE2B 781673dc539e4368ad9b460c07294a5b396fde8d4a30796dd2a49a1ebc555023d6c4b5919cd6f0d6d7ace2dd6456643afd8079e0af66d823eec42d51989f0338 SHA512 e672c4eba64b6c57f58159bf2e6ff17cfcc6c26d0750fb4bc96b1843013ccc40857f2bb5e1739a06eb35b21310083b6c3b7803574bb15d2e4c6c5b97fa083db4
+MISC ChangeLog 2603 BLAKE2B 9a550a4a541ca0e9af40dfb2ef1e00144750da24ad54b9469a2742c539786604f7b88a3327d991e20271d128111610acc3b4f79c5973368f0f3a86fce60260d3 SHA512 5bd5d3cf7dada03314af579e3aff025ac3118ee97d9e5e160fe003486e58a53bc42482d7a02b73437fd343ac6a59de6e7abbe522f3c458af0145ae19a758483d
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
