@@ -1,3 +1,9 @@
+*reposilite-3.0.1 (15 Aug 2022)
+
+  15 Aug 2022; Manuel Friedli <manuel@gentoo.org> +files/reposilite-3.service,
+  +reposilite-3.0.1.ebuild:
+  dev-util/reposilite: Let's see how v3 works :)
+
 *reposilite-2.9.26 (27 Dec 2021)
 
   27 Dec 2021; Manuel Friedli <manuel@gentoo.org> +files/reposilite-2.9.26.cdn,
